# shutdown-guard-rs

./: Cargo.toml  Cross.toml  README.md  build-all-zig.sh  build-all.sh  shutdown_time.txt
.cargo/: config.toml
.github/workflows/: build-example.yml
examples/: basic.rs  file_cleanup.rs  shutdown_demo.rs
src/: lib.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
